--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
  	"name": "Auto Price Remitano ",
- 	"description": "Every 20 secondes : Switch to next tab & refresh next (+1) tab",
+ 	"description": "Auto buy&sell Remitano - - @Author:PhuongCong - v1.01",
  	"version": "1.0",
  	"permissions": [
  		"http://*/*",
